--- a/PFinal/PFinal/Views/Index.cshtml
+++ b/PFinal/PFinal/Views/Index.cshtml
@@ -6,7 +6,7 @@
 <h2>Index</h2>
 <html>
 <head>
-    <title>Geolocation</title>
+    <title>Geolocalizac&oacute;n</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <style>
