--- a/PFinal/PFinal/Views/Index.cshtml
+++ b/PFinal/PFinal/Views/Index.cshtml
@@ -19,6 +19,9 @@
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
 
     <script>
+        //borrame!!
+
+
  // Note: This example requires that you consent to location sharing when
  // prompted by your browser.  If you see a blank space instead of the map, this
  // is probably because you have denied permission for location sharing.
