--- a/PFinal/Mibuspuntano/Views/Home/Contact.cshtml
+++ b/PFinal/Mibuspuntano/Views/Home/Contact.cshtml
@@ -1,27 +1,15 @@
-﻿@*@{
-    ViewBag.Title = "Contacto
-        ";
-}*@
-@*<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+﻿@{
+        ViewBag.Title = "Mi Bus Puntano Contacto";
+    }
+   
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>*@
 <div class="jumbotron jumbotron-sm">
     <div class="container">
         <div class="row">
-            <div class="col-sm-12 col-lg-12">
+            <div class="col-sm-12 col-sm-12">
                 <h1 class="h1">
-                    Cont&aacute;ctenos <br /> <small>Sientase libre de dejar sus sugerencias</small>
+                    Cont&aacute;ctenos
+                 <br /> <small>Sientase libre de dejar sus sugerencias</small>
                 </h1>
             </div>
         </div>
@@ -83,9 +71,11 @@
             </div>
         </div>
         <div class="col-md-4">
-          <br>
-              <form>
+            <br>
+            @*<form>
                 <legend><span class="glyphicon glyphicon-globe"></span> </legend>
 
-            </form>
+            </form>*@
         </div>
+        </div>
+    </div>
