--- a/PFinal/Mibuspuntano/Views/Home/About.cshtml
+++ b/PFinal/Mibuspuntano/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
-﻿@{
-    ViewBag.Title = "About";
+﻿
+@{
+    ViewBag.Title = "Acerca de";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<h2>Acerca de nosotros</h2>
+
