--- a/PFinal/Mibuspuntano/Views/Home/Index.cshtml
+++ b/PFinal/Mibuspuntano/Views/Home/Index.cshtml
@@ -3,9 +3,8 @@
     ViewBag.Title = "Mi Bus Puntano";
 }
 
-<div class="jumbotron">
-    <h1>Mi Bus Puntano</h1>
-    <p class="lead">Mi bus puntano es una aplicaci&oacute;n......</p>
-
-</div>
+<br />
+<br />
+<br />
+<iframe src="/Home/Map" width="100%" height="550" style="border:solid 0px;"></iframe>
 
