--- a/PFinal/Mibuspuntano/Views/Home/Index.cshtml
+++ b/PFinal/Mibuspuntano/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 <iframe src="/Home/Map" width="100%" height="550" style="border:solid 0px;"></iframe>
 
 <button id="a_pie"> <img src="~/Images/hombrecito.jpg" /></button>
-<button id="taxi"> <img src="~/Images/taxi_logo.gif" /></button>
+<button id="taxi"> <img src="~/Images/taxi.jpg" /></button>
 <button id="colectivo"> <img src="~/Images/83.jpg" /> </button>
 
 
