--- a/PFinal/Mibuspuntano/Views/Home/Map.cshtml
+++ b/PFinal/Mibuspuntano/Views/Home/Map.cshtml
@@ -1,35 +1,37 @@
 ﻿@{
     Layout = null;
 }
-
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    <meta charset="utf-8">
     <title>Mi bus puntano</title>
+    <meta name="viewport" content="initial-scale=1.0">
+    <meta charset="utf-8">
     <link href="~/Content/Site.css" rel="stylesheet" />
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places,geometry,drawing"></script>
 </head>
-
 <body>
-
-    <div id="loading">
-        <div style="background:#fff;position:absolute;top:0;left:0;width:100%;height:100%;z-index:100;"></div>
-        <div style="position:absolute;top:0;left:0;margin-left:40%;margin-top:20%;z-index:101;">Cargando....</div>
+    <div id="map"></div>
+    <div id="botonesmapa">
+        <input id="pac-input-desde" class="controls" type="text" placeholder="Ingrese origen">
+        <input type="image" class="geo" src="~/Images/g.png" onclick="geodesde()" />
+        <input id="pac-input-hasta" class="controls" type="text" placeholder="Ingrese destino">
+        <input type="image" class="geo" src="~/Images/g.png" onclick="geohasta()" />
     </div>
+    <script>
+        function initMap() {
+            var map = new google.maps.Map(document.getElementById('map'), {
+                center: new google.maps.LatLng(-33.302248, -66.336788),
+                disableDefaultUI: true,
+                MapTypeControl: true,
+                streetViewControl: true,
+                ZoomControl: true,
+                zoom: 16
+            });
+        }
 
-    <input id="pac-input-desde" class="controls" type="text" placeholder="Desde" value="Chacabuco 702-800, D5700HLO San Luís, San Luis, Argentina">
-    <input type="image" class="geo" src="~/Images/g.png" onclick="geodesde()" />
-    <input id="pac-input-hasta" class="controls" type="text" placeholder="Hasta" value="Belgrano 802-900, D5700GIA San Luís, San Luis, Argentina">
-    <input type="image" class="geo" src="~/Images/g.png" onclick="geohasta()" />
+    </script>
 
-    <div id="map-canvas" style="float:left;width:70%; height:100%"></div>
-    <div id="directionsPanel" class="panel" style="float:right;width:27%;height:100%">
-        <p>Total Distance: <span id="total"></span></p>
-    </div>
-
-    <script type="text/javascript" src="~/Scripts/botones.js"></script>
     <script type="text/javascript" src="~/Scripts/busquedadelugar.js"></script>
     <script type="text/javascript" src="~/Scripts/rutas.js"></script>
     <script type="text/javascript" src="~/Scripts/geo.js"></script>
@@ -37,12 +39,15 @@
     <script>
         (function () {
             initialize();
-            initialize1();
-
-            setTimeout(function () {
-                $("#loading").hide("slow");
-            }, 2000);
         })();
     </script>
+
 </body>
 </html>
+
+
+
+
+
+
+
