--- a/PFinal/Mibuspuntano/Views/Home/Map.cshtml
+++ b/PFinal/Mibuspuntano/Views/Home/Map.cshtml
@@ -12,7 +12,7 @@
     <script src="~/Scripts/busquedadelugar.js"></script>
     <script src="~/Scripts/jquery-2.1.4.min.js"></script>  
 </head>
-<body onload="iniciar()">
+<body onload="initialize(),initialize1()">
         <div id="map" style="float:left;width:63%; height:100%"></div>
         <div id="botonesmapa">
             <input id="pac-input-desde" class="controls" type="text" placeholder="Ingrese origen" value="Chacabuco 702-800, San Luis, Argentina">
