--- a/PFinal/Mibuspuntano/Views/Home/Map.cshtml
+++ b/PFinal/Mibuspuntano/Views/Home/Map.cshtml
@@ -1,27 +1,46 @@
-﻿@{Layout = null;}
+﻿@{
+    Layout = null;
+}
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta charset="utf-8">
     <title>Mi bus puntano</title>
     <link href="~/Content/Site.css" rel="stylesheet" />
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places,geometry,drawing"></script>
-    <script src="~/Scripts/rutas.js"></script>
-    <script src="~/Scripts/geo.js"></script>
-    <script src="~/Scripts/busquedadelugar.js"></script>
-    <script src="~/Scripts/jquery-2.1.4.min.js"></script>  
 </head>
-<body onload="initialize(),initialize1()">
-        <div id="map" style="float:left;width:63%; height:100%"></div>
-        <div id="botonesmapa">
-            <input id="pac-input-desde" class="controls" type="text" placeholder="Ingrese origen" value="Chacabuco 702-800, San Luis, Argentina">
-            <input type="image" id="1" class="geo" src="~/Images/g.png" onclick="geodesde()"/>
-            <input id="pac-input-hasta" class="controls" type="text" placeholder="Ingrese destino" value="Junin 702-800, San Luis, Argentina">
-            <input type="image" id="2" class="geo" src="~/Images/g.png" onclick="geohasta()"/>
-            <</div>
-            <div id="directionsPanel" class="panel" style="float:right;width:34%;height: 100%">
-                <p>Total Distance: <span id="total"></span></p>
-            </div>
-    </body>
+
+<body>
+    <div id="loading">
+        <div style="background:#fff;position:absolute;top:0;left:0;width:100%;height:100%;z-index:100;"></div>
+        <div style="position:absolute;top:0;left:0;margin-left:40%;margin-top:20%;z-index:101;">Cargando....</div>
+    </div>
+
+    <img id="a" src="~/Images/darkgreen_MarkerA.png" class="ab"/>
+    <input id="pac-input-desde" class="controls" type="text" placeholder="Ingrese origen" value="Hipólito Irigoyen 601-699, D5702BHJ San Luís, San Luis, Argentina">
+    <input type="image" class="geo" id="1" src="~/Images/g.png" onclick="geodesde()" />
+    <img id="b" src="~/Images/red_MarkerB.png" class="ab" />
+    <input id="pac-input-hasta" class="controls" type="text" placeholder="Ingrese destino" value=" Junin 601-699, D5702BHJ San Luís, San Luis, Argentina">
+    <input type="image" class="geo" id="2" src="~/Images/g.png" onclick="geohasta()" />
+
+    <div id="map" style="float:left;width:70%; height:100%"></div>
+    <div id="directionsPanel" class="panel" style="float:right;width:27%;height:100%">
+        <p>Total Distance: <span id="total"></span></p>
+    </div>
+    <script type="text/javascript" src="~/Scripts/busquedadelugar.js"></script>
+    <script type="text/javascript" src="~/Scripts/ruta.js"></script>
+    <script type="text/javascript" src="~/Scripts/geo.js"></script>
+    <script src="~/Scripts/jquery-2.1.4.js"></script>
+    <script>
+        (function () {
+            initialize();
+            initialize1();
+
+            setTimeout(function () {
+                $("#loading").hide("slow");
+            }, 2000);
+        })();
+    </script>
+</body>
 </html>
