--- a/PFinal/Mibuspuntano/Views/Home/Contact.cshtml
+++ b/PFinal/Mibuspuntano/Views/Home/Contact.cshtml
@@ -19,6 +19,10 @@
     <div class="row">
         <div class="col-md-8">
             <div class="well well-sm">
+
+                @if (string.IsNullOrEmpty(ViewBag.SendMessage))
+                {
+
                 <form action="/Home/Contact" method="post">
                     <div class="row">
                         <div class="col-md-6">
@@ -68,6 +72,14 @@
                         </div>
                     </div>
                 </form>
+                }
+                else{
+                    <div class="col-md-12">
+                        <div class="text-info">
+                            @ViewBag.SendMessage
+                        </div>
+                    </div>
+                }
             </div>
         </div>
         <div class="col-md-4">
