--- a/PFinal/Mibuspuntano/Views/Home/Map.cshtml
+++ b/PFinal/Mibuspuntano/Views/Home/Map.cshtml
@@ -17,12 +17,12 @@
         <div style="position:absolute;top:0;left:0;margin-left:40%;margin-top:20%;z-index:101;">Cargando....</div>
     </div>
 
-    <img id="a" src="~/Images/darkgreen_MarkerA.png" class="ab"/>
+    @*<img id="a" src="~/Images/darkgreen_MarkerA.png" class="ab"/>*@
     <input id="pac-input-desde" class="controls" type="text" placeholder="Ingrese origen" value="Hipólito Irigoyen 601-699, D5702BHJ San Luís, San Luis, Argentina">
-    <input type="image" class="geo" id="1" src="~/Images/g.png" onclick="geodesde()" />
-    <img id="b" src="~/Images/red_MarkerB.png" class="ab" />
+    @*<input type="image" class="geo" id="1" src="~/Images/g.png" onclick="geodesde()" />
+    <img id="b" src="~/Images/red_MarkerB.png" class="ab" />*@
     <input id="pac-input-hasta" class="controls" type="text" placeholder="Ingrese destino" value=" Junin 601-699, D5702BHJ San Luís, San Luis, Argentina">
-    <input type="image" class="geo" id="2" src="~/Images/g.png" onclick="geohasta()" />
+    @*<input type="image" class="geo" id="2" src="~/Images/g.png" onclick="geohasta()" />*@
 
     <div id="map" style="float:left;width:70%; height:100%"></div>
     <div id="directionsPanel" class="panel" style="float:right;width:27%;height:100%">
