--- a/PFinal/Mibuspuntano/Views/Home/Contact.cshtml
+++ b/PFinal/Mibuspuntano/Views/Home/Contact.cshtml
@@ -11,7 +11,6 @@
                     Cont&aacute;ctenos
                  <br /> <small>Sientase libre de dejar sus sugerencias</small>
                 </h1>
-            </div>
         </div>
     </div>
 </div>
@@ -49,10 +48,10 @@
                                 </label>
                                 <select id="Subject" name="Subject" class="form-control" required="required">
                                     <option value="na" selected="">Elija una opci&oacute;n:</option>
-                                    <option value="service">Servicios generales al ciente</option>
-                                    <option value="suggestions">Sugerencias</option>
-                                    <option value="product">Soporte del producto</option>
-                                    <option value="otros">Otros</option>
+                                    <option value="service" name="Servicios generales al cliente">Servicios generales al ciente</option>
+                                    <option value="suggestions" name="Sugerencias">Sugerencias</option>
+                                    <option value="product" name="Soporte del prducto">Soporte del producto</option>
+                                    <option value="otros" name="Otros">Otros</option>
                                 </select>
                             </div>
                         </div>
