--- a/PFinal/Mibuspuntano/Views/Shared/_Layout.cshtml
+++ b/PFinal/Mibuspuntano/Views/Shared/_Layout.cshtml
@@ -29,23 +29,37 @@
                     </ul>
                 </div>
             </div>
+            <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                </ul>
+                <ul class="nav navbar-nav"></ul>
                 <!--Pulling Awesome Font -->
-                <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-              
-                    <ul class="social-network social-circle">
-                        <li><a href="#" class="icoRss" title="Rss"><i class="fa fa-rss"></i></a></li>
-                        <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#" class="icoGoogle" title="Google +"><i class="fa fa-google-plus"></i></a></li>
-                        <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-                    </ul>
-                
+                <div class="row mobile-social-share">
+                    
+                    <div id="socialHolder" class="col-md-3">
+                        <div id="socialShare" class="btn-group share-group">
+                            <a data-toggle="dropdown" class="btn btn-info">
+                                <i class="fa fa-share-alt fa-inverse"></i>
+                            </a>
+                            <button href="#" data-toggle="dropdown" class="btn btn-info dropdown-toggle share">
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
+                                    <ul class="social-network social-circle">
+                                        <li><a href="#" class="icoRss" title="Rss"><i class="fa fa-rss"></i></a></li>
+                                        <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a href="#" class="icoGoogle" title="Google +"><i class="fa fa-google-plus"></i></a></li>
+                                        <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+                                    </ul>
+                                    </ul>
+                        </div>
+
                     </div>
-        </div>
-    </div>
+                </div>
+            </div>
 
     <div class="container body-content">
         @RenderBody()
