--- a/PFinal/Mibuspuntano/Views/Home/Contact.cshtml
+++ b/PFinal/Mibuspuntano/Views/Home/Contact.cshtml
@@ -48,7 +48,7 @@
                                 </label>
                                 <select id="Subject" name="Subject" class="form-control" required="required">
                                     <option value="na" selected="">Elija una opci&oacute;n:</option>
-                                    <option value="service" name="Servicios generales al cliente">Servicios generales al ciente</option>
+                                    <option value="Servicios generales al cliente" name="Servicios generales al cliente">Servicios generales al ciente</option>
                                     <option value="suggestions" name="Sugerencias">Sugerencias</option>
                                     <option value="product" name="Soporte del prducto">Soporte del producto</option>
                                     <option value="otros" name="Otros">Otros</option>
