--- a/PFinal/Mibuspuntano/Views/Home/Index.cshtml
+++ b/PFinal/Mibuspuntano/Views/Home/Index.cshtml
@@ -2,10 +2,9 @@
 
 <br />
 <br />
-<br />
-<div id="frame">
-    <iframe id="mi_mapa" name="mi_mapa" src="/Home/Map" style="border:solid 0px;"></iframe>
-</div>
+
+<iframe id="mi_mapa" name="mi_mapa" src="/Views/Home/MapaInicio.html"></iframe>
+
 <link href="~/Content/estilo_inicio.css" rel="stylesheet" />
 <div class="panel panel-default">
     <div class="panel-body">
