--- a/PFinal/Mibuspuntano/Content/Site.css
+++ b/PFinal/Mibuspuntano/Content/Site.css
@@ -147,23 +147,64 @@ pac-input:focus {
  ================= */
 
 /* footer social icons */
-ul.social-network {
+/*.mobile-social-share {
+    background: none repeat scroll 0 0 #EEEEEE;
+    display: block !important;
+    min-height: 70px !important;
+    margin: 50px 0;
+}*/
+/*.share-group {
+    float: right;
+    margin: 18px 25px 0 0;
+}*/
+
+.btn-group {
+    display: inline-block;
+    font-size: 0;
+    position: relative;
+    vertical-align: middle;
+    white-space: nowrap;
+}
+
+.mobile-social-share ul {
+    float: right;
+    list-style: none outside none;
+    margin: 0;
+    min-width: 61px;
+    padding: 0;
+}
+
+.share {
+    min-width: 17px;
+}
+
+/*.mobile-social-share li {
+    display: block;
+    font-size: 18px;
+    list-style: none outside none;*/
+    /*margin-bottom: 3px;
+    margin-left: 4px;
+    margin-top: 3px;*/
+}
+/*ul.social-network {
     background-color:rgba(0, 0, 0, 0.3);
 	list-style: none;
 	display: inline;
 	margin-left:0 !important;
 	padding: 0;
-}
+}*/
 ul.social-network li {
 	display: inline;
 	margin: 0 5px;
 }
 
-
-/* footer social icons */
-.social-network a.icoRss:hover {
-	background-color: #F56505;
+.btn-share {
+    background-color: #BEBEBE;
+    border-color: #CCCCCC;
+    color: #333333;
 }
+/* footer social icons */
+
 .social-network a.icoFacebook:hover {
 	background-color:#3B5998;
 }
@@ -179,10 +220,10 @@ ul.social-network li {
 .social-network a.icoLinkedin:hover {
 	background-color:#007bb7;
 }
-.social-network a.icoRss:hover i, .social-network a.icoFacebook:hover i, .social-network a.icoTwitter:hover i,
+/*.social-network a.icoRss:hover i, .social-network a.icoFacebook:hover i, .social-network a.icoTwitter:hover i,
 .social-network a.icoGoogle:hover i, .social-network a.icoVimeo:hover i, .social-network a.icoLinkedin:hover i {
 	color:#fff;
-}
+}*/
 a.socialIcon:hover, .socialHoverClass {
 	color:#44BCDD;
 }
@@ -232,3 +273,18 @@ a {
 ul.nav li a {
     background-color: #E0781B;
 }
+@media (max-width : 320px) {
+    #socialHolder{
+        padding-left:5px;
+        padding-right:5px;
+    }
+    
+    
+    #socialShare{
+        margin-left:5px;
+        margin-right:5px;
+    }
+    
+   
+}
+
