--- a/PFinal/Mibuspuntano/Views/Shared/_Layout.cshtml
+++ b/PFinal/Mibuspuntano/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
 
-    @RenderSection("head",false)
+    @RenderSection("head", false)
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -20,7 +20,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-               @* @Html.ActionLink("Index", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
+                @* @Html.ActionLink("Index", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
                 <div>
                     <ul class="nav navbar-nav">
                         <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
@@ -34,7 +34,7 @@
                 <ul class="nav navbar-nav"></ul>
                 <!--Pulling Awesome Font -->
                 <div class="row mobile-social-share">
-                    
+
                     <div id="socialHolder" class="col-md-3">
                         <div id="socialShare" class="btn-group share-group">
                             <a data-toggle="dropdown" class="btn btn-info">
@@ -48,30 +48,29 @@
                                     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
                                     <ul class="social-network social-circle">
-                                        <li><a href="#" class="icoRss" title="Rss"><i class="fa fa-rss"></i></a></li>
-                                        <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-                                        <li><a href="#" class="icoGoogle" title="Google +"><i class="fa fa-google-plus"></i></a></li>
-                                        <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+                                        <li><a target="_blank" href="http://www.facebook.com/sharer.php?u=http://mibuspuntano.azurewebsites.net/" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a target="_blank" href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a target="_blank" href="#" class="icoGoogle" title="Google +"><i class="fa fa-google-plus"></i></a></li>
+                                        <li><a target="_blank" href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
                                     </ul>
-                                    </ul>
+                            </ul>
                         </div>
 
                     </div>
                 </div>
             </div>
 
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Mi Bus Puntano</p>
-        </footer>
-    </div>
+            <div class="container body-content">
+                @RenderBody()
+                <hr />
+                <footer>
+                    <p>&copy; @DateTime.Now.Year - Mi Bus Puntano</p>
+                </footer>
+            </div>
 
-    <script src="~/Scripts/jquery-2.1.4.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
-    @RenderSection("scripts",false)
-    
+            <script src="~/Scripts/jquery-2.1.4.min.js"></script>
+            <script src="~/Scripts/bootstrap.min.js"></script>
+            @RenderSection("scripts", false)
+
 </body>
 </html>
