--- a/PFinal/Mibuspuntano/Views/Shared/_Layout.cshtml
+++ b/PFinal/Mibuspuntano/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
+        <div class="container-inline" >
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
@@ -30,6 +30,7 @@
                 </div>
             </div>
             <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+            
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav"></ul>
                 <!--Pulling Awesome Font -->
