--- a/PFinal/Mibuspuntano/Views/Home/Index.cshtml
+++ b/PFinal/Mibuspuntano/Views/Home/Index.cshtml
@@ -33,9 +33,8 @@
                 <span>Colectivo</span>
             </a>
         </ul>
+        <div id="recorridos" ></div>
     </div>
-
-    
 </div>
 <script type="text/javascript" src="~/Scripts/busquedadelugar.js"></script>
 <script type="text/javascript" src="~/Scripts/bicicleta.js"></script>
